[gd_scene load_steps=40 format=2]

[ext_resource path="res://Entities/Enemies/Bosses/Fridgehead/Fridgehead.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/Bosses/Fridgehead/Fridgehead_Head.png" type="Texture" id=2]
[ext_resource path="res://UI/BossBar/Bossbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Effects/Blood/Blood.tscn" type="PackedScene" id=6]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Managing/Colliders/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/Enemies/Bosses/Fridgehead/LaserAttack.gd" type="Script" id=9]
[ext_resource path="res://Items/Weapons/Bullet/Sprites/Laser.png" type="Texture" id=10]
[ext_resource path="res://Entities/Enemies/Bosses/Fridgehead/Spin.gd" type="Script" id=11]
[ext_resource path="res://Entities/Enemies/Bosses/Fridgehead/Jump.gd" type="Script" id=12]
[ext_resource path="res://RadialGradient.png" type="Texture" id=13]
[ext_resource path="res://Managing/SoundManager.tscn" type="PackedScene" id=14]
[ext_resource path="res://Entities/Enemies/Bosses/Fridgehead/FridgeCrash.mp3" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 4 )

[sub_resource type="CircleShape2D" id=10]
radius = 16.0312

[sub_resource type="CircleShape2D" id=11]
radius = 181.003

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 48, 32.75 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 60.5, 35.25 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 19, 27.5 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 19, 14 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 10.5, 6 )

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Laser:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Laser:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserHitbox/CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 188, 5.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserHitbox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Light2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Shoot"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Laser:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 376, 11 ), Vector2( 376, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Laser:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -22 ), Vector2( 0, -20 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserHitbox/CollisionShape2D:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 188, 5.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserHitbox/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16.5 ), Vector2( 188, -16.5 ) ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 188, 5.5 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 11.5, 26.5 )

[sub_resource type="Animation" id=23]
resource_name = "Block"
length = 0.45
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 72 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.3
loop = true
step = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Laser"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 41, 42 ]
}

[sub_resource type="Animation" id=6]
resource_name = "LaserPrep"
length = 0.9
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Laser", -1, 1.0, false ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpecialAttacks/Laser/Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9 ),
"transitions": PoolRealArray( 1, 1.93187, 1.7411, 1.93187, 1.7411, 1.93187, 1.7411, 1.93187, 1.7411, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.5, 1.0, 1.5, 1.0, 1.5, 1.0, 1.5, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "LaserRecovery"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 47, 48 ]
}

[sub_resource type="Animation" id=4]
resource_name = "PunchSide"
length = 0.45
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collisions/PunchSideHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "PunchUp"
length = 0.375
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collisions/PunchSideHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Collisions/PunchSideHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Collisions/BlockHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpecialAttacks/Laser/Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.45
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 12 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Spin"
length = 0.3
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=22]
resource_name = "StartBlock"
length = 0.15
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 60, 70 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Block", -1, 1.0, false ],
"method": "play"
} ]
}

[node name="Fridgehead" type="KinematicBody2D" groups=["Fridgehead"]]
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -38 )
hframes = 10
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -4 )
shape = SubResource( 9 )

[node name="Collisions" type="Node2D" parent="."]

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, -13 )
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 10 )

[node name="FridgeHurtbox" parent="Collisions" instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, -40 )
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/FridgeHurtbox" index="0"]
shape = SubResource( 10 )

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 11 )

[node name="UppercutArea" type="Area2D" parent="Collisions"]
visible = false
position = Vector2( 0, -71 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/UppercutArea"]
position = Vector2( 0, 0.25 )
shape = SubResource( 12 )

[node name="DodgeArea" type="Area2D" parent="Collisions"]
visible = false
position = Vector2( 0, -38 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/DodgeArea"]
position = Vector2( 0, 3 )
shape = SubResource( 13 )

[node name="PunchSideHitbox" parent="Collisions" instance=ExtResource( 8 )]
visible = false
collision_mask = 2
damage = 2

[node name="CollisionShape2D" parent="Collisions/PunchSideHitbox" index="0"]
position = Vector2( 1, -27.5 )
shape = SubResource( 14 )
disabled = true

[node name="BlockHitbox" parent="Collisions" instance=ExtResource( 8 )]
visible = false
collision_mask = 2
damage = 2

[node name="CollisionShape2D" parent="Collisions/BlockHitbox" index="0"]
position = Vector2( 1, -14 )
shape = SubResource( 24 )

[node name="UppercutHitbox" parent="Collisions" instance=ExtResource( 8 )]
visible = false
collision_mask = 2
damage = 1

[node name="CollisionShape2D" parent="Collisions/UppercutHitbox" index="0"]
position = Vector2( -0.5, -14 )
shape = SubResource( 15 )
disabled = true

[node name="FloorRay" type="RayCast2D" parent="Collisions"]
visible = false
enabled = true
cast_to = Vector2( 0, 5 )

[node name="WallRay" type="RayCast2D" parent="Collisions"]
visible = false
position = Vector2( 0, -21 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="SpecialAttacks" type="Node2D" parent="."]

[node name="Laser" type="Node2D" parent="SpecialAttacks"]
script = ExtResource( 9 )

[node name="Laser" type="TextureRect" parent="SpecialAttacks/Laser"]
material = SubResource( 16 )
margin_top = -20.0
margin_bottom = -20.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpecialAttacks/Laser"]
anims/RESET = SubResource( 18 )
anims/Shoot = SubResource( 17 )

[node name="LaserHitbox" parent="SpecialAttacks/Laser" instance=ExtResource( 8 )]
visible = false
position = Vector2( 0, 6 )
collision_mask = 2
damage = 1

[node name="CollisionShape2D" parent="SpecialAttacks/Laser/LaserHitbox" index="0"]
position = Vector2( 0, -16.5 )
shape = SubResource( 19 )
disabled = true

[node name="Light2D" type="Light2D" parent="SpecialAttacks/Laser"]
position = Vector2( 3, -17 )
texture = ExtResource( 13 )
texture_scale = 0.04
energy = 0.0

[node name="Spin" type="Node2D" parent="SpecialAttacks"]
script = ExtResource( 11 )

[node name="SpinHitbox" parent="SpecialAttacks/Spin" instance=ExtResource( 8 )]
visible = false
position = Vector2( 0, 6 )
collision_mask = 2
damage = 1

[node name="CollisionShape2D" parent="SpecialAttacks/Spin/SpinHitbox" index="0"]
position = Vector2( 0.5, -32.5 )
shape = SubResource( 21 )
disabled = true

[node name="StopTimer" type="Timer" parent="SpecialAttacks/Spin"]
wait_time = 2.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="SpecialAttacks/Spin"]
wait_time = 0.075
autostart = true

[node name="Jump" type="Node2D" parent="SpecialAttacks"]
script = ExtResource( 12 )

[node name="DamageManager" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -13 )
maxHealth = 12500
kbEnabled = false
kbAmount = 0.0
isBoss = true
freeOnDeath = false
spritePath = NodePath("../Sprite")
deathParticles = ExtResource( 6 )

[node name="Timers" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 4.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Block = SubResource( 23 )
anims/Idle = SubResource( 1 )
anims/Laser = SubResource( 7 )
anims/LaserPrep = SubResource( 6 )
anims/LaserRecovery = SubResource( 8 )
anims/PunchSide = SubResource( 4 )
anims/PunchUp = SubResource( 5 )
anims/RESET = SubResource( 2 )
anims/Run = SubResource( 3 )
anims/Spin = SubResource( 20 )
anims/StartBlock = SubResource( 22 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Bossbar" parent="CanvasLayer" instance=ExtResource( 3 )]
bossName = "Fridgehead"
dmgManagerPth = NodePath("../../DamageManager")

[node name="FridgeCrashSFX" parent="." instance=ExtResource( 14 )]
audio = ExtResource( 15 )
volumeMod = 10.0
freeOnFinish = true

[connection signal="hurt" from="Collisions/Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="hurt" from="Collisions/FridgeHurtbox" to="DamageManager" method="take_damage"]
[connection signal="area_entered" from="Collisions/UppercutArea" to="." method="uppercut"]
[connection signal="area_entered" from="Collisions/DodgeArea" to="." method="dodge"]
[connection signal="timeout" from="SpecialAttacks/Spin/StopTimer" to="SpecialAttacks/Spin" method="stop"]
[connection signal="timeout" from="SpecialAttacks/Spin/ShootTimer" to="SpecialAttacks/Spin" method="shoot"]
[connection signal="damaged" from="DamageManager" to="." method="_on_damaged"]
[connection signal="dead" from="DamageManager" to="." method="_on_dead"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="attack"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="SpecialAttacks/Laser" method="_on_animation_finished"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/FridgeHurtbox"]
[editable path="Collisions/PlayerDetection"]
[editable path="Collisions/PunchSideHitbox"]
[editable path="Collisions/BlockHitbox"]
[editable path="Collisions/UppercutHitbox"]
[editable path="SpecialAttacks/Laser/LaserHitbox"]
[editable path="SpecialAttacks/Spin/SpinHitbox"]
